corrected ListerTable error: vertical scroll not showing

--- a/frontend/modules/dataListerTable/InfinityScroller.css
+++ b/frontend/modules/dataListerTable/InfinityScroller.css
@@ -9,15 +9,15 @@
      overflow: scroll;
     /* width: 100%;*/
 
-
-     height: 100%;
+    height: calc(100% - 30px);
+     /*height: 100%;*/
     /*position: absolute;*/
 
 }
 
 .scrollTableContainer
 {
-    /*overflow: initial;*/
+    overflow: initial;
     position: sticky;
     top:0;
 }
