--- a/frontend/modules/dataListerTable/ListerTable.css
+++ b/frontend/modules/dataListerTable/ListerTable.css
@@ -12,7 +12,7 @@
 
 .listTable {
     table-layout: fixed;
-    white-space: nowrap;
+    /*white-space: nowrap;*/
     border-collapse: collapse;
     border: 1px solid #000;
     /*width: 100%;*/
@@ -44,6 +44,7 @@
 .listTable tbody tr {
     /*display: table-row;*/
     background-color: white;
+    white-space: nowrap;
 }
 
 .listTable td {
@@ -89,7 +90,7 @@
 }
 
 .tableContainer {
-    /*overflow: scroll;*/
+    overflow: scroll;
     width: 100%;
     height: 100%;
 }
